# aoc2022

./: .gitignore  .tool-versions  BUILD.bazel  README.md  WORKSPACE  pyproject.toml
cli/: aoc-cli
cli/devbox_cli/: main.py
files/day1/: README.md
files/day10/: README.md
files/day11/: README.md
files/day12/: README.md
files/day4/: BUILD.bazel  README.md
files/day5/: README.md
files/day6/: BUILD.bazel  README.md
files/day7/: README.md
files/day8/: README.md
files/day9/: BUILD.bazel  README.md
src/go/day1/: BUILD.bazel  main.go
src/go/day2/: BUILD.bazel  README.md  main.go
src/go/day3/: BUILD.bazel  README.md  main.go  main_test.go
src/go/day4/: BUILD.bazel  main.go  main_test.go
src/go/day5/: BUILD.bazel  main.go
src/go/day6/: BUILD.bazel  main.go  main_test.go
src/go/shared/: BUILD.bazel  read_file.go
src/haskell/: BUILD.bazel
src/haskell/day7/: BUILD.bazel  Main copy.hs
src/python/day1/: BUILD.bazel  day1.py
src/python/day10/: BUILD.bazel  day10.py  test.py
src/python/day11/: BUILD.bazel  day11.py
src/python/day12/: BUILD.bazel  day12.py
src/python/day2/: BUILD.bazel  day2.py
src/python/day3/: BUILD.bazel  day3.py  test.py
src/python/day5/: BUILD.bazel  day5.py
src/python/day6/: BUILD.bazel  day6.py  test.py
src/python/day7/: BUILD.bazel  day7.py
src/python/day8/: BUILD.bazel  day8.py  test.py
src/python/day9/: BUILD.bazel  day9.py
terraform/infrastructure/core/devbox/01-devboxs/: .terraform.lock.hcl  main.tf  outputs.tf  state.tf  variables.tf
terraform/modules/naming/: outputs.tf  variables.tf
terraform/modules/scaleway/devbox/: main.tf  outputs.tf  variables.tf
tools/pytest/: defs.bzl
