load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

exports_files([
    "input.txt",
    "test.txt",
])

go_library(
    name = "day2_lib",
    srcs = ["main.go"],
    importpath = "github.com/albarralnunez/aoc2022/src/go/day2",
    visibility = ["//visibility:public"],
    deps = ["//src/go/shared"],
)

go_binary(
    name = "day2",
    data = [
        "input.txt",
        "test.txt",
    ],
    embed = [":day2_lib"],
    visibility = ["//visibility:public"],
)
