load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

exports_files([
    "input.txt",
])

go_library(
    name = "day3_lib",
    srcs = ["main.go"],
    importpath = "github.com/albarralnunez/aoc2022/src/go/day3",
    visibility = ["//visibility:private"],
    deps = ["//src/go/shared"],
)

go_binary(
    name = "day3",
    data = [
        "input.txt",
    ],
    embed = [":day3_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "day3_test",
    srcs = ["main_test.go"],
    data = [
        "test.txt",
    ],
    embed = [":day3_lib"],
)
