load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "day4_lib",
    srcs = ["main.go"],
    importpath = "github.com/albarralnunez/aoc2022/src/go/day4",
    visibility = ["//visibility:private"],
    deps = ["//src/go/shared"],
)

go_binary(
    name = "day4",
    data = ["//files/day4:input.txt"],
    embed = [":day4_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "day4_test",
    srcs = ["main_test.go"],
    embed = [":day4_lib"],
)
