load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "day5_lib",
    srcs = ["main.go"],
    importpath = "github.com/albarralnunez/aoc2022/src/go/day5",
    visibility = ["//visibility:private"],
    deps = ["//src/go/shared"],
)

go_binary(
    name = "day5",
    data = [
        "//files/day5:input.txt",
        "//files/day5:test_input.txt",
    ],
    embed = [":day5_lib"],
    visibility = ["//visibility:public"],
)
