package(default_visibility = ["//visibility:public"])

load("//tools/pytest:defs.bzl", "pytest_test")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "day3_lib",
    srcs = ["day3.py"],
)

py_binary(
    name = "day3",
    srcs = ["day3.py"],
    data = ["//files/day3:input.txt"],
    legacy_create_init = False,
)

pytest_test(
    name = "day3_test",
    srcs = ["test.py"],
    legacy_create_init = False,
    deps = [":day3_lib"],
)
