package(default_visibility = ["//visibility:public"])

load("//tools/pytest:defs.bzl", "pytest_test")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "day5_lib",
    srcs = ["day3.py"],
)

py_binary(
    name = "day5",
    srcs = ["day5.py"],
    data = [
        "//files/day5:input.txt",
        "//files/day5:test_input.txt"
    ],
    legacy_create_init = False,
)
